40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caramel-store
  namespace: caramel-store
  labels:
    app.kubernetes.io/part-of: caramel-vanilla
    app.kubernetes.io/component: store
    app.kubernetes.io/name: caramel-store
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: caramel-store
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
